[package]
name = "latencyflex2-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
nix = { version = "0.26.1", default-features = false, features = ["time"] }
once_cell = "1.16.0"
parking_lot = "0.12.1"

[dependencies.windows]
version = "0.43.0"
features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_Performance", "Win32_Security", "Win32_System_WindowsProgramming"]

[features]
default = ["dx12"]
dx12 = ["windows/Win32_Graphics_Direct3D12", "windows/Win32_Graphics_Dxgi_Common"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
