[package]
name = "latencyflex2-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", optional = true, features = ["ws", "macros"] }
chrono = "0.4.23"
once_cell = "1.16.0"
parking_lot = "0.12.1"
spark = { git = "https://github.com/sjb3d/spark.git", optional = true }
tokio = { version = "1.33.0", optional = true, features = ["sync", "rt"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.26.1", default-features = false, features = ["time"] }

[target.'cfg(windows)'.dependencies.windows]
version = "0.43.0"
features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_Performance", "Win32_Security", "Win32_System_WindowsProgramming",
    "Win32_System_LibraryLoader"]

[features]
default = ["dx12", "vulkan", "profiler"]
dx12 = ["windows/Win32_Graphics_Direct3D12", "windows/Win32_Graphics_Dxgi_Common"]
vulkan = ["spark"]
profiler = ["axum", "tokio"]
